// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Bubble Rendering] renders Dismissable without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-bubble rcx-box rcx-box--full rcx-bubble__group"
    >
      <button
        class="rcx-bubble__content"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-arrow-down rcx-icon rcx-css-1g87xs3"
        >
          
        </i>
        <span>
          New messages
        </span>
      </button>
      <button
        aria-label="Dismiss New messages"
        class="rcx-bubble__dismiss"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-cross-small rcx-icon rcx-css-1g87xs3"
        >
          
        </i>
      </button>
    </div>
  </div>
</body>
`;

exports[`[Bubble Rendering] renders IconAndLabel without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-bubble rcx-box rcx-box--full "
    >
      <button
        class="rcx-bubble__content"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-arrow-down rcx-icon rcx-css-1g87xs3"
        >
          
        </i>
        <span>
          New messages
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`[Bubble Rendering] renders LabelOnly without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-bubble rcx-box rcx-box--full "
    >
      <button
        class="rcx-bubble__content"
      >
        <span>
          See new messages
        </span>
      </button>
    </div>
  </div>
</body>
`;
